Fixed banner overlap

--- a/frontend/src/css/Banner.css
+++ b/frontend/src/css/Banner.css
@@ -18,7 +18,7 @@
   .banner 
   {
     position: fixed;
-    top: calc(63px);
+    top: 66px;
   }
 }
 
